tests/__snapshots__/api-toBeCallableWith-ts-expect-error-stderr.snap.txt
Error: Expression is callable with the given argument.

  15 |   expect(concat(1)).type.toBeCallableWith("two");
  16 |   // @ts-expect-error!
  17 |   expect(concat(2)).type.not.toBeCallableWith("two"); // fail
     |                              ~~~~~~~~~~~~~~~~
  18 | 
  19 |   // @ts-expect-error!
  20 |   concat(3)();

       at ./__typetests__/toBeCallableWith.tst.ts:17:30 ❭ respects '// @ts-expect-error' directive

Error: Expression is callable without arguments.

  22 |   expect(concat(3)).type.toBeCallableWith();
  23 |   // @ts-expect-error!
  24 |   expect(concat(3)).type.not.toBeCallableWith(); // fail
     |                              ~~~~~~~~~~~~~~~~
  25 | });
  26 | 

       at ./__typetests__/toBeCallableWith.tst.ts:24:30 ❭ respects '// @ts-expect-error' directive

